fix(components): change application's icon alignement

--- a/packages/components/src/HeaderBar/HeaderBar.scss
+++ b/packages/components/src/HeaderBar/HeaderBar.scss
@@ -97,6 +97,10 @@ $background-color-on-hover: shade($brand-primary, 30);
 		width: auto;
 	}
 
+	.tc-header-bar-brand :global(.tc-dropdown-button-title-label) {
+		margin-left: 10px;
+	}
+
 	:global(.btn):global(.btn-link) {
 		color: $white;
 		font-size: $font-size-base;
